; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_objdict.c_mp_obj_dict_store.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_objdict.c_mp_obj_dict_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { i32 }

@MP_MAP_LOOKUP_ADD_IF_NOT_FOUND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_obj_dict_store(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_5__*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @mp_obj_is_dict_type(i32 %8)
  %10 = call i32 @mp_check_self(i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = call %struct.TYPE_5__* @MP_OBJ_TO_PTR(i32 %11)
  store %struct.TYPE_5__* %12, %struct.TYPE_5__** %7, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %14 = call i32 @mp_ensure_not_fixed(%struct.TYPE_5__* %13)
  %15 = load i32, i32* %6, align 4
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* @MP_MAP_LOOKUP_ADD_IF_NOT_FOUND, align 4
  %20 = call %struct.TYPE_6__* @mp_map_lookup(i32* %17, i32 %18, i32 %19)
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %20, i32 0, i32 0
  store i32 %15, i32* %21, align 4
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}

declare dso_local i32 @mp_check_self(i32) #1

declare dso_local i32 @mp_obj_is_dict_type(i32) #1

declare dso_local %struct.TYPE_5__* @MP_OBJ_TO_PTR(i32) #1

declare dso_local i32 @mp_ensure_not_fixed(%struct.TYPE_5__*) #1

declare dso_local %struct.TYPE_6__* @mp_map_lookup(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
